fixed be where nowrap was applied in all forms site wide

--- a/scss/v2/job-spec.scss
+++ b/scss/v2/job-spec.scss
@@ -45,7 +45,6 @@ $break-sidebar: 'max-width: 1120px';
       font-weight: bold;
       font-size: 19px;
       overflow: visible;
-      white-space: nowrap;
       &.large {
         @include grid-column(12);
       }
